# bmp

./: CMakeLists.txt  README.md
include/bmp/: bmp.hpp
src/: bmp.cpp  main.cpp
